--- a/index.html
+++ b/index.html
@@ -3,43 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/media/cloud.svg" type="image/x-icon">
-    <link rel="stylesheet" href="assets/style/style.css">
-    <title>Previsão do Tempo</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Aula 27/05</title>
 </head>
 <body>
     <div class="container">
-        <div class="mainContent">
-            <header>Previsão do Tempo - <span id="cities"></span></header>
 
-            <main>
-                <div class="content" class="today">
-                    <div class="timeDate">
-                        <h6 id="timeDate"></h6>
-                        <h6 id="humidade"></h6>
-                        <h6 id="velocidade"></h6>
-                    </div>
+        <header>
 
-                    <div class="temp">
-                        <img src="" alt="Weather" id="image" />
-                        <h6 id="descript"></h6>
-                        <spam id="temperature"></spam>
-                    </div>
-                </div>
-            </main>
+            <h1>Cronômetro</h1>
+
+        </header>
+
+        <main>
+
+            <p><span id="hour">00</span>h <span id="minute">00</span>m <span id="second">00</span>s <span id="milisecond">00</span>ms</p>
+
+            <div class="contentBTN">
+
+                <button class="material-symbols-outlined" id="stop" onclick="stop()">stop</button>
+                <button class="material-symbols-outlined" id="start" onclick="start()">play_arrow</button>
+                <button class="material-symbols-outlined"  id="reset" onclick="reset()">replay</button>
+
+            </div>
+
+        </main>
+
+        <div class="dataHora">
+            <p>
+                <span>Data Hora do Sistema</span>
+                <span id="dataHora">00/00/0000 00h 00m 00s</span>
+            </p>
         </div>
 
-        <main class="mainController">
-            <h2>Previsão - <span>Próximos 5 dias</span></h2>
-            <section id="controller">
-                <div id="constDate1"></div>
-                <div id="constDate2"></div>
-                <div id="constDate3"></div>
-                <div id="constDate4"></div>
-                <div id="constDate5"></div>
-            </section>
-        </main>
     </div>
+
+    <canvas  id="gradient-canvas" style="width:100vw;height:100vh"></canvas>
+
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/Gradient.js"></script>
+    <script>
+        var gradient = new Gradient()
+        gradient.initGradient('#gradient-canvas');
+    </script>
 </body>
-<script src="assets/script/script.js"></script>
 </html>
